# showcase

./: .gitignore  Actions.cpp  CMakeLists.txt  main.cpp
imp/: GameObject.cpp  GameScene.cpp
include/Buffer/: EBO.h  VAO.h  VBO.h  texture.h
include/Debugger/: Debugger.h
include/EventHandler/: Actions.h  EventHandler.h  EventType.h
include/Game/: GameScene.h
include/GameScene/: GameObject.h  GameScene.h
include/Scene/: Scene.h  SceneManager.h
include/glad/: glad.h
include/shader/: shader.h
include/ui/: Appearance.h  Shape.h  UIBuilder.h  UIFactory.h  ui.h
resources/Shaders/: default.frag  default.vert
resources/icon/: resource.rc
